# SugarHTTPS

./: .gitignore  .gitmodules  CMakeLists.txt  Findings.txt  Makefile  README.md  SugarHTTP.cpp  compile  install.sh  main.cpp  meson.build  run.py  test.cpp  uninstall.sh
include/: SugarHTTPS.cpp  SugarHTTPS.hh  SugarHTTPS.hpp  main.hpp  request.cpp  request.hpp
include/RestClient_Implementation/: SugarHTTPS_RestClient.cpp  SugarHTTPS_RestClient.hpp
include/cURL_Implementation/: SugarHTTPS_cURL.cpp  SugarHTTPS_cURL.hpp
source/TheSugarcoat/: sugarRequests.hpp
src/: SugarHTTPS.cc  SugarHTTPS.cpp  SugarHTTPS.h  SugarHTTPS.hh  main.cpp  not_main.cpp
testing/: MakeRequest.cc  main.cpp  main.py
